--- a/Redaction/Rapport_Final/Rapport.Rmd
+++ b/Redaction/Rapport_Final/Rapport.Rmd
@@ -32,6 +32,7 @@ header-includes:
 - \DeclareMathOperator{\arctanh}{arctanh}
 - \usepackage{subcaption}
 - \usepackage{microtype}
+- \usepackage{amsmath,amssymb}
 ---
 
 ```{r setup, include=FALSE}
@@ -45,6 +46,8 @@ options(enable_print_style = FALSE)
 #library(reticulate)
 library(shiny)
 ```
+
+\newpage 
 
 # Introduction {.unnumbered}
 
@@ -182,10 +185,10 @@ Le modèle *Word2vec* a initialement été construit en utilisant une fonction d
 #### Version softmax {#subsec:softmax}
 
 Soit $w_1,\,\dots,\,w_T$ les mots utilisés pour entraîner le modèle. L'objectif du modèle Skip-Gram est, étant donné un mot focus, de prévoir quels sont les mots voisins contextes dans une certaine fenêtre $w$. Mathématiquement, on cherche à maximiser la quantité :
-\begin{equation}
+\begin{equation*}
 \frac 1 T\sum_{t=1}^T\sum_{-w\leq j \leq w,\,j\ne 0} \log \mathbb P(w_{t+j}\vert w_{t})
 (\#eq:objSoftMax)
-\end{equation}
+\end{equation*}
 où :
 
 - les $w_{t+j}$ sont les mots voisins de $w_t$ ($w_t$ est donc un mot focus et $w_{t+j}$ un mot contexte) ; 
@@ -595,7 +598,7 @@ Peut-être ce mot n'a-t-il pas suffisamment été entraîné (246 apparitions da
 Les mots en vert correspondent à ceux présents dans l'opération, le mot en rouge le mot que l'on serait supposé trouver et les mots en orange les 10 mots les plus proches du résultat de l'opération vectorielle.}
 \end{figure}
 
-# Analyse des sentiments [Kim] {#sec:sentimentalAnalysis}
+# Analyse des sentiments {#sec:sentimentalAnalysis}
 
 <!-- LAISSER EN COMMENTAIRES :  -->
 <!-- A évoquer (ordre à l’appréciation du rédacteur avec sous parties éventuelles) :  -->
@@ -604,7 +607,7 @@ Les mots en vert correspondent à ceux présents dans l'opération, le mot en ro
 <!-- * évoquer les données de tweets utilisées avec la nuance 2011-2018 par rapport à ce qui a été dit avant.  -->
 <!-- * décrire la base SNCF (demander à Benji plus de précisions dessus).  -->
 
-## Prédire le sentiment d’un tweet à partir des *word-embeddings* [Romain sauf la fin Kim]
+## Prédire le sentiment d’un tweet à partir des *word-embeddings*
 
 <!-- LAISSER EN COMMENTAIRES :  -->
 <!-- A évoquer (ordre à l’appréciation du rédacteur avec sous parties éventuelles) :  -->
@@ -621,13 +624,123 @@ Les mots en vert correspondent à ceux présents dans l'opération, le mot en ro
 <!-- - comparer les résultats (en gros dire que word-embedding n’améliore pas vraiment la base-line).  -->
 <!-- - une interprétation de cette nonamélioration malgré une méthode des word-embedding qui semble plus élaborée que la baseline : le domain-shift.  -->
 
+Nous cherchons dans cette partie à prédire le sentiment associé à un tweet.
+Nous nous intéresserons ici à 2 sentiments possibles : +1 quand le tweet est jugé positif, -1 quand il est jugé négatif.
+D'une manière générale, on se demande comment, à partir des mots d'un tweet, on peut prédire son sentiment.
+À partir de la base de tweets de la SNCF, nous allons donc chercher à construire le meilleur modèle de prédiction de sentiments.
+<!-- - suppose que la base est décrite en intro de la partie  -->
+Nous comparerons alors deux approches : un première basée sur les sentiments moyens de chaque mot des tweets et l'autre basée sur les *word-embeddings*.
+
+### Prédiction à partir du sentiment moyen des mots
+
+Un premier modèle de prédiction du sentiment peut être imaginé en utilisant l'information des tweets labelisés pour déterminer un sentiment moyen par mot.
+En effet, dans un premier temps, on peut regarder pour chaque mot du vocabulaire du corpus le nombre de tweets positifs ($nb_+$) et négatifs ($nb_-$) dans lesquels il apparaît et lui associer un sentiment moyen $\frac{nb_+ - nb_-}{nb_+ + nb_-}$, compris entre -1 et 1.
+Dans un second temps, on peut alors calculer la moyenne des sentiments des mots d'un tweet, et décider du label du tweet en fonction : si la moyenne est positive, le tweet sera jugé positif, sinon, il sera négatif.
+Autrement dit, considérons un tweet $t$ composé des mots $\{ mot_1 , \dots , mot_n \}$ alors $S(t) = 2 \times 1\{ \frac{1}{n} \sum \limits_{i=1}^n \alpha_i \geq 0\} - 1$ est la prédiction du sentiment du tweet, où $\alpha_i$ est le sentiment moyen du $mot_i$.
 
 
+Afin d'étudier l'ajustement du modèle, nous séparons le corpus en une base de *train* composée de 16 004 tweets et une base de *test* composée de 6 858 tweets.
+Nous entraînons le modèle sur la base de *train*, c'est-à-dire que l'on calcule les sentiments moyens des mots de cette base, puis nous estimons le modèle sur la base de *test*, c'est-à-dire que l'on prédit pour chaque tweet de cette base un sentiment, que l'on compare au vrai sentiment.
+Il peut exister des mots présents dans la base de *test* qui ne le sont pas dans la base de *train*, pour ces mots-là on met donc le sentiment moyen à 0.
+L'application de cette méthode permet d'obtenir une *accuracy*, c'est-à-dire un taux de tweets dont le sentiment est bien prédit, de $70,52\%$.
 
 
-Les techniques d'apprentissage automatique sont souvent confrontées à un défi majeur : le fait que les modèles soient entraînés sur des données différentes de celles que l’on va effectivement utiliser : c’est ce que l’on appelle le « *dataset shift* »^[Les éléments en lien avec le *dataset shift* proviennent de \cite{Candela}]. Bien que des solutions comme la correction de biais de sélection des échantillons, ou encore celle des données déséquilibrées, soient étudiées depuis de nombreuses décennies dans le monde de la statistique, certains autres problèmes, comme celui du changement de domaine (*domain shift*) émergent depuis plus récemment suite à l’utilisation croissante des méthodes de *machine learning*. 
+Ce modèle peut cependant être amélioré. En effet, pour l'instant on compare la moyenne des sentiments des mots de la phrase à un seuil qui vaut 0.
+Toutefois, on pourrait essayer d'optimiser ce seuil : $\forall \gamma \in [-1;1]$, on définit $S_{\gamma}(t) = 2 \times 1\{ \frac{1}{n} \sum \limits_{i=1}^n \alpha_i \geq \gamma\} - 1$ que l'on utilise pour effectuer une prédiction du sentiment, puis on sélectionne le $\gamma$ qui maximise l'*accuracy* sur la base de *test*. 
 
-Le changement de domaine se caractérise par un changement de la nature, du « domaine » des données utilisées. Dans le cas de *deep-learning* sur des données de photographie, il pourrait par exemple s’agir de traiter de corpus de photos prises par des appareil photo calibrés de manière différentes (contraste, luminosité…) . Dans notre cas précis, il s’agit de la différence entre les données de tweets publiés en France entre 2013 et 2017 et les données de tweets de la SNCF, qui portent sur un sujet très spécifique et pour lesquels certains mots ont peut-être une interprétation spécifique en termes de sentiments.  Modéliser le « domain shift » implique donc d’estimer le passage d’une représentation à une autre en utilisant des informations de distribution. ^[La correction gamma (représentation paramétrique non linéaire de l’intensité des pixels) est par exemple une manière de pouvoir traiter le « domain shift » lié à l’utilisation d’appareil photos différents.] Dans ce qui suit, l’idée n’est pas de modéliser mathématiquement^[ Pour modéliser mathématiquement de manière relativement « grossière » un *domain shift*, il s’agirait de considérer par exemple une variable latente « idéale » $x_0$ (une base de tweets de référence), jamais observée mais qui influerait sur $y$ (l’indice mensuel). Nous observons uniquement $x$ telle $x=F(x_0)$ avec $F$ qui représente la transformation de la base de tweets de référence à la base de tweets réellement utilisée, qui peut varier en fonction de la base de données $x$ utilisée. La distribution $P(y|x_0)$ (de  l’indice mensuel sachant le jeu de tweets idéal utilisé) est considérée comme étant la même pour les deux jeux de tweets utilisée (base « sncf » et base de tweets postés en France entre 2013 et 2017). En revanche, cette distribution est modifiée si F est modifiée.] le *domain shift* des deux bases de tweets mais de présenter quelques statistiques descriptives illustrant ce phénomène. 
+\begin{figure}
+\begin{center}
+\includegraphics[width=0.5\textwidth]{img/max_baseline.png}
+\captionsetup{margin=0cm,format=hang,justification=justified}
+\caption{Optimisation du seuil $\gamma$ pour le modèle à partir des sentiments moyens des mots}\label{fig:max_baseline}
+\end{center}
+\end{figure}
+
+On effectue cette optimisation (figure \ref{fig:max_baseline}) et on trouve alors que le $\gamma$ qui maximise l'*accuracy* est $\gamma^* = -0.14$, pour une *accuracy* de $89,08\%$.
+On constate donc une nette amélioration par rapport au cas où $\gamma = 0$.
+Nous avons donc ici une premier modèle qui peut servir de référence pour la suite.
+Idéalement, nous souhaiterions que le modèle basé sur les *word-embeddings* soit meilleur que celui-ci.
+
+### Prédiction à partir des *word-embeddings*
+
+Nous nous intéressons maintenant à un modèle basé sur l'utilisation de nos *word-embeddings*.
+Afin d'exploiter nos vecteurs, l'idée est d'utiliser un modèle de régression binaire de estimé sur notre corpus, en considérant comme prédicteurs chacune des dimensions des vecteurs.
+Pour réaliser cette régression, il faut toutefois pouvoir attribuer à chaque tweet un vecteur et effectuer une forme de *sentence embedding*.
+Pour cela, nous décidons d'attribuer à chaque tweet la moyenne des vecteurs de l'ensemble des mots du tweet.
+Nous pouvons ensuite réaliser la régression sur ce vecteur.
+
+Si on note $Y_i$ le sentiment du tweet $i$ et $X_{i,1}, \dots, X_{i,n}$ chacune des coordonnées du *sentence embedding* associé au tweet (nous avons ici $n=100$), alors on s'intéresse au modèle $Y_i = 1\{ \sum\limits_{i = 1}^n \beta_i X_{i,j} + \epsilon_i \geq 0 \}$ où $\epsilon_i$ est le résidu de notre modèle.
+Nous allons chercher à estimer, en notant $F_{\epsilon}$ la fonction de répartition des résidus :
+\begin{equation*}
+\mathbb{P}(Y_i = 1 | X_{i,j}) = \mathbb{P}(\sum\limits_{i = 1}^n \beta_i X_{i,j} + \epsilon_i \geq 0 | X_{i,j})
+= \mathbb{P}(\sum\limits_{i = 1}^n \beta_i X_{i,j}\geq - \epsilon_i  | X_{i,j}) = F_{\epsilon}(\sum\limits_{i = 1}^n \beta_i X_{i,j})
+\end{equation*}
+
+Deux modèles binaires peuvent être utilisés, selon la choix de $F_{\epsilon}$ : 
+
+1. Le modèle logit : $F_{\epsilon}(x) = \frac{1}{1 + e^{-x}}$.
+
+2. Le modèle probit : $F_{\epsilon}$ est la fonction de répartition d'une loi gaussienne centrée et réduite.
+
+
+Nous avons donc deux choix de spécification à estimer sur notre corpus, afin de déterminer la meilleure.
+En réalité, nous pouvons également nous interroger sur d'autres paramètres à intégrer au modèle :
+
+1. Les *stop words* : également appelé \og mots vides \fg, ce sont des mots communs dont l'analyse est en général inutile car leur présence n'apporte pas d'information.
+Dans notre cas, on peut donc penser à estimer le modèle en enlevant du corpus ces *stop-words*.
+
+2. Les mots inconnus : la base qui a servi à entraîner le modèle des *word-embeddings* est différente de celle que l'on utilise pour la prédiction des sentiments. 
+Ainsi, il y a des mots de ce corpus pour lesquels on ne connaît pas la représentation vectorielle.
+On peut alors décider que la représentation vectorielle des mots inconnus est le vecteur nul.
+Cependant, lorsqu'on a entraîné le modèle *Word2Vec* un pré-processing a permis de regrouper les mots très peu fréquents au sein d'un même mot clé et le modèle a alors calculé une représentation vectorielle commune à tous ces mots.
+On peut donc décider d'attribuer ce vecteur aux mots inconnus, en estimant que s'ils sont absents du corpus d'entraînement du modèle *Word2Vec*, ce sont bien des mots très peu fréquents.
+
+Afin de mener une analyse la plus complète possible, nous avons décidé d'estimer tous les modèles possibles selon que l'on choisisse :
+
+1. D'inclure ou non les *stop-words* ;
+
+2. Le vecteur nul ou le vecteur des mots très peu fréquents estimé pour les mots inconnus ;
+
+3. Le modèle probit ou logit.
+
+
+Nous obtenons ainsi 8 modèles à estimer. Pour comparer ces modèles entre eux, nous avons décidé d'utiliser l'AUC, *Area Under the Curve*, c'est-à-dire l'aire sous la courbe ROC, *receiver operating characteristic*. ^[La courbe ROC permet de représenter pour l'ensemble des seuils possibles l'évolution du nombre de vrais positifs en fonction du nombre de faux positifs. 
+L'AUC, l'aire sous cette courbe, est donc compris entre 0 et 1 (le modèle qui prédirait de façon aléatoire 1 ou -1 a un AUC de 0,5).]
+Nous effectuons alors une validation croisée, pour chacun de nos 8 modèles, en se basant sur l'AUC.
+Nous nous intéressons également à des critères économétriques afin de déterminer la meilleure représentation entre le modèle logit et le modèle probit.
+
+Nous obtenons alors les résultats suivants :
+
+1. Il ne semble pas utile d'enlever les *stop words* pour améliorer les résultats.
+Ceci peut s'expliquer car certains *stop-words* peuvent peut-être renseigner sur un sentiment.
+Ainsi, le mot \og pas \fg est un *stop-word* mais renseigne plutôt sur des tweets négatifs (son sentiment moyen dans le corpus est de -0.25).
+De même, on peut penser que les phrases contenant du futur ou du conditionnel renvoie à des sentiments différents.
+
+2. Il apparaît meilleur d'affecter aux mots inconnus le vecteur des mots peu fréquents estimé par le modèle *Word2Vec* que de leur attribuer le vecteur nul.
+On aurait pu intuitivement penser qu'en l'absence d'information sur un mot, il est préférable de lui attribuer un vecteur nul afin qu'il n'influe pas sur la décision du sentiment.
+Cependant, cela ne se vérifie pas empiriquement.
+Cela veut peut-être signifier que le vecteur associé aux mots très peu fréquents estimé par notre modèle *Word2Vec* capture bien la rareté du mot et que les mots peu fréquents ont peut-être tendance à être plus positifs ou plus négatifs et non neutres. 
+
+3. Utiliser un modèle logit permet d'obtenir de meilleurs résultats qu'en utilisant un modèle probit.
+En effet, à la fois les AUC et les critères économétriques sont meilleurs pour les modèles logit, quels que soient les choix faits par ailleurs sur les *stop words* et les mots inconnus.
+
+Finalement, nous utiliserons donc par la suite le modèle estimé par une **régression logit** sur la base en **gardant les *stop-words* ** et en affectant aux mots inconnus dans le modèle *Word2Vec* le **vecteur des mots très peu fréquents** estimé par ce dernier.
+
+
+L'application de ce modèle à la même base *test* que le modèle basé sur les sentiments moyens des mots donne une *accuracy* de $68,71\%$.
+Nous obtenons de moins bons résultats en utilisant le modèle basé sur les *word-embeddings*. 
+Nous allons maintenant essayer d'analyser ces résultats.
+
+### Une cause des mauvaises prédictions : le *domain shift*
+
+Les techniques d'apprentissage automatique sont souvent confrontées à un défi majeur : le fait que les modèles soient entraînés sur des données différentes de celles que l’on va effectivement utiliser : c’est ce que l’on appelle le « *dataset shift* »^[Les éléments en lien avec le *dataset shift* proviennent de \cite{Candela}].
+Bien que des solutions comme la correction de biais de sélection des échantillons, ou encore celle des données déséquilibrées, soient étudiées depuis de nombreuses décennies dans le monde de la statistique, certains autres problèmes, comme celui du changement de domaine (*domain shift*) émergent depuis plus récemment suite à l’utilisation croissante des méthodes de *machine learning*. 
+
+Le changement de domaine se caractérise par un changement de la nature, du « domaine » des données utilisées.
+Dans le cas de *deep-learning* sur des données de photographie, il pourrait par exemple s’agir de traiter de corpus de photos prises par des appareil photo calibrés de manière différentes (contraste, luminosité…) .
+Dans notre cas précis, il s’agit de la différence entre les données de tweets publiés en France entre 2013 et 2017 et les données de tweets de la SNCF, qui portent sur un sujet très spécifique et pour lesquels certains mots ont peut-être une interprétation spécifique en termes de sentiments. 
+Modéliser le « domain shift » implique donc d’estimer le passage d’une représentation à une autre en utilisant des informations de distribution. ^[La correction gamma (représentation paramétrique non linéaire de l’intensité des pixels) est par exemple une manière de pouvoir traiter le « domain shift » lié à l’utilisation d’appareil photos différents.]
+Dans ce qui suit, l’idée n’est pas de modéliser mathématiquement^[ Pour modéliser mathématiquement de manière relativement « grossière » un *domain shift*, il s’agirait de considérer par exemple une variable latente « idéale » $x_0$ (une base de tweets de référence), jamais observée mais qui influerait sur $y$ (l’indice mensuel). Nous observons uniquement $x$ telle $x=F(x_0)$ avec $F$ qui représente la transformation de la base de tweets de référence à la base de tweets réellement utilisée, qui peut varier en fonction de la base de données $x$ utilisée. La distribution $P(y|x_0)$ (de  l’indice mensuel sachant le jeu de tweets idéal utilisé) est considérée comme étant la même pour les deux jeux de tweets utilisée (base « sncf » et base de tweets postés en France entre 2013 et 2017). En revanche, cette distribution est modifiée si F est modifiée.] le *domain shift* des deux bases de tweets mais de présenter quelques statistiques descriptives illustrant ce phénomène. 
 
 Pour ce faire, ...
 
